<resources>
    <string name="app_title">LoftMoney</string>
    <string name="title_hint">Title</string>
    <string name="price_hint">Price</string>
    <string name="add_button_text">Add</string>
    <string name="price_template">%1$s ₽</string>
    <string name="budget_title">Budget accounting</string>
    <string name="outcome">Expense</string>
    <string name="income">Income</string>
    <string name="enter_button_title">Enter</string>
    <string name="remove_title">Delete</string>
    <string name="remove_confirmation">Are you sure you want to delete the selected items?</string>
    <string name="selected">Selected: %1$s</string>
    <string name="balance">Balance</string>
    <string name="available_finance">Available finance</string>
</resources>
