<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/add_button"
        android:paddingBottom="61dp"
        android:paddingStart="33dp"
        android:paddingEnd="104dp">

        <EditText
            android:id="@+id/title_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:inputType="text"
            android:textColor="@color/title_text_color"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/price_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_hint"
            android:inputType="number"
            android:layout_marginTop="25dp"
            android:textColor="@color/title_text_color"
            android:textSize="24sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:background="@null"
        android:textColor="@color/add_button_color_inactive"/>

</RelativeLayout>